# virt-rs

./: .gitignore  Cargo.toml  README.md
examples/: version.rs
src/: connection.rs  domain.rs  error.rs  lib.rs  macros.rs  version.rs  wrapper.rs
virt-sys/: Cargo.toml  README.md  build.rs  download_and_generate.sh  generate_bindings.sh
virt-sys/src/: lib.rs  libvirt_5_0_0.rs  libvirt_5_10_0.rs  libvirt_5_1_0.rs  libvirt_5_2_0.rs  libvirt_5_3_0.rs  libvirt_5_4_0.rs  libvirt_5_5_0.rs  libvirt_5_6_0.rs  libvirt_5_7_0.rs  libvirt_5_8_0.rs  libvirt_5_9_0.rs  libvirt_6_0_0.rs  libvirt_6_1_0.rs  libvirt_6_2_0.rs  libvirt_6_3_0.rs  libvirt_6_4_0.rs  libvirt_6_5_0.rs  libvirt_6_6_0.rs
virt-sys/tests/: assert_version.rs
