[package]
name = "virt"
version = "0.1.0"
authors = ["Linus Färnstrand <faern@faern.net>"]
readme = "README.md"
keywords = ["libvirt", "virtualization", "kvm", "qemu", "xen"]
categories = ["api-bindings"]
edition = "2018"

[workspace]
members = ["virt-sys"]

[features]
# Without any activated features this will compile to libvirt-5.0.0 bindings.
# Activate the corresponding version feature to get newer a newer API.
# As long as libvirt follow semver the minor bumps should be API compatible.
libvirt-5-1-0 = ["virt-sys/libvirt-5-1-0"]
libvirt-5-2-0 = ["virt-sys/libvirt-5-2-0"]
libvirt-5-3-0 = ["virt-sys/libvirt-5-3-0"]
libvirt-5-4-0 = ["virt-sys/libvirt-5-4-0"]
libvirt-5-5-0 = ["virt-sys/libvirt-5-5-0"]
libvirt-5-6-0 = ["virt-sys/libvirt-5-6-0"]
libvirt-5-7-0 = ["virt-sys/libvirt-5-7-0"]


[dependencies]
virt-sys = { version = "0.1.0", path = "./virt-sys" }
err-derive = "0.1"
log = "0.4.8"
